After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688363 - droute: Memory leak in path cleanup
droute: Memory leak in path cleanup
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
1.32.x
Other Linux
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-11-15 05:27 UTC by Andrew Potter
Modified: 2012-11-19 16:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
droute: Fix memory leak in path cleanup (1.48 KB, patch)
2012-11-15 05:29 UTC, Andrew Potter
committed Details | Review

Description Andrew Potter 2012-11-15 05:27:19 UTC
path_free() does not release all the memory allocated to a path. The properties hash table has allocated elements in both the key and value; g_free should be specified as the destructor for both in path_new()

g_ptr_array_free(path->introspection, FALSE) was probably being called to avoid a destructor being called on the elements of the array that point to static data. But that method returns an array that must still be g_free()d.

Patch attached.
Comment 1 Andrew Potter 2012-11-15 05:29:40 UTC
Created attachment 229023 [details] [review]
droute: Fix memory leak in path cleanup
Comment 2 Mike Gorse 2012-11-19 16:39:15 UTC
Committed as a969192. Thanks for the patch.