    droute: Fix memory leak in path cleanup

Frees all allocated memory.

    g_ptr_array_free(..., FALSE) was probably being called to avoid a destructor being called on the elements of the array that point to static data. But that method returns an array that must still be g_free()d.

    https://bugzilla.gnome.org/show_bug.cgi?id=688363